@@ -9,6 +9,7 @@ v1.5.xxxx.0 - unreleased
           audio (old QuickTime PCM)
  NEW    : Added channel encryption detection for DVB-t during scan
  NEW    : Ticket #784, Enable ctrl+A in the MediaInfo window
+ NEW    : Added EPG current event information for DVB
  CHANGED: Updated FFmpeg
  CHANGED: Updated MediaInfoLib to v0.7.36 Beta
  CHANGED: Updated ZenLib to v0.4.16 Beta
